<resources>
    <string name="app_name" translatable="false">Pocket Travel Guide</string>
    <string name="en" translatable="false">En</string>
    <string name="despre">About</string>
    <string name="help">Help</string>
    <string name="optiuni">Options</string>
    <string name="recomandari">Suggestions</string>
    <string name="harta">Map</string>
    <string name="ro" translatable="false">RO</string>
    <string name="autor" translatable="false">Sebesan Corina-Nicoleta 2019</string>
    <string name="descript" translatable="false">logo</string>
    <string name="goToLocation">Go!</string>
    <string name="do_you_want_a_specific_location">Do you want a specific location?</string>
    <string name="locCure">I am here</string>
    <string name="number_hours">Number of available hours for visiting</string>
    <string name="primul">Parcul Natural Dumbrava Sibiului</string>
    <string name="aldoilea">Second Sight</string>
    <string name="which_sights">Which sights you do NOT want to visit</string>
    <string name="no_cur">Can\'t get current location</string>
    <string name="sibiu" translatable="false"><![CDATA[<h2 style="text-align: justify;">Localizarea si istoria orasului Sibiu</h2>
<p style="text-align: justify;">Una dintre cele mai spectaculoase destinatii turistice ale Romaniei, <strong>Sibiul</strong> se gaseste in sudul Transilvaniei, in depresiunea Cibinului, intr-o zona cu un relief deosebit, reprezentat de campii colinare, la care se adauga terasele raului Cibin. In regiunea nord-estica, orasul este delimitat de podisul Tarnavelor, ce coboara pana spre Valea Cibinului, prin dealul Gusteritei. Situat la o altitudine de 430 m, Sibiul este traversat de o clima temperat &#8211; continentala, cel il trasforma intr-o destinatie turistica ideala, indiferent de anotimp, mai ales ca iernile sunt ferite de viscole, iar verile sunt deosebit de placute. Orice turist ajuns aici este cucerit de atmosfera parca desprinsa dintr-o alta epoca, evidentiata prin cladiri istorice dintre cele mai frumoase si evenimente culturale pline de culoare, ce iti dau sentimentul ca te afli intr-un oras mai mereu invesmantat in haine de sarbatoare.</p>
<p style="text-align: justify;">Conform arheologilor, zona Sibiului a fost locuita inca din timpurile preistorice. Descoperirea la Cedonia a unor asezari romane este o dovada in plus a continuitatii vietii umane pe aceste meleaguri. Sibiul este atestat in documentele istorice inca din anul 1191, sub diverse denumiri. Astfel, in 1321 este mentionat sub numele Hermannsdorf, iar in anul 1366, sub denumirea de Hermannstadt, cand este ridicat la rangul de &quot;civitas&quot;. Inca din epoca evului mediu cetatea cunoaste o dezvoltare economica accelerata. Aceasta evolutie s-a reflectat si in extinderea urbanistica. Sfarsitul secolului XVI marcheaza o perioada de framantari militare, ca o consecinta a evenimentelor ce au condus la unirea principatelor, sub domnia lui Mihai Viteazul. Intre 1601-1604, multe dintre cladirile orasului sunt arse de armata condusa de Stefan Cseky, iar in 1610, Sibiul este ocupat de principele Gabriel Bethlen. Transformarea Transilvaniei in Principat, in cadrul Imperiului Habsburgic, la sfarsitul secolului XVII, marcheaza o noua etapa in istoria urbei.</p>
<p style="text-align: justify;">De numele Sibiului se leaga si infiintarea primului spital din Romania care functiona pe locul actualului Azil de batrani, atestat inca din anul 1292. Este cunoscut, de asemenea, faptul la Sibiu existau &quot;lazarete&quot;, spatii unde erau izolati leprosii, asa cum reiese dintr-un document datat 1475. Tot aici este fondata si prima farmacie din tara, inaugurata in anul 1494.</p>
<p style="text-align: justify;"><span>Sibiul este si un important nod de legaturi rutiere si feroviare, fiind traversat de drumul european E68 (Arad &#8211; Sibiu &#8211; Brasov) si E81 (Cluj-Pitesti-Sibiu-Bucuresti). Locuitorii apartin mai multor grupuri etnice, astfel ca, alaturi de romani, aici traiesc germani, urmasi ai colonistilor saxoni stabiliti aici in secolul XII, dar si maghiari, evrei si romi, ceea ce a a conferit caracterul multietnic si multicultural orasului.</span></p>
<h2 style="text-align: justify;">Atractii si obiective turistice in Sibiu</h2>
<p style="text-align: justify;">Sibiul se infatiseaza astazi turistilor sositi din toate colturile lumii ca un veritabil muzeu in aer liber. In spatiul romanesc el este considerat o adevarata capitala culturala, confirmata de vechea traditie artistica, dar si prin edificii precum filarmonica, cele doua teatre, numeroase muzee si cateva galerii de arta. Anual, aici se organizeaza <em>Festivalul International de Teatru</em>, unul dintre cele mai importante evenimente de acest gen din Europa de sud-est, dar si <em>Festivalul de jazz</em>, ce reuseste sa adune un numar impresionant de participanti dar si spectatori. <strong>Centrul istoric al orasului</strong> este nucleul vietii urbane si a fost declarat in anul 2004 monument UNESCO. In anul 2007, alaturi de Luxemburg, Sibiul a fost innobilat cu titlul de &quot;<em>Capitala Culturala a Europei</em>&quot;, ceea ce i-a sporit renumele pe plan mondial.</p>
<p style="text-align: justify;">Patrunderea ideologiei Reformei in Ardeal, in veacul al XV-lea, este evidentiata de infiintarea la Sibiu a unei tipografii unde sunt publicate si primele carti in limba romana. In secolul XIX, guvernatorul Transilvaniei, Samuel von Brukenthal, pune bazele unei impresionante biblioteci si alcatuieste o pretioasa colectie de arta si antichitati. Acestea vor fi deschise marelui public incepand cu 1817 si au stat la baza alcatuirii celui mai important obiectiv turistic din Sibiu &#8211; <strong>Muzeul Brukenthal</strong>. Un bun punct de pornire in explorarea Sibiului este <strong>Piata Mare</strong>, ce corespunde centrului istoric al urbei.</p>
<p style="text-align: justify;">Un alt reper turistic important este <strong>Piata Mica</strong>, unde se gasesc multe constructii ce dateaza din secolele XIV-XVI si care adaposteau, in trecut, atelierele mestesugarilor. Emblematic pentru acest spatiu este <strong>Turnul Sfatului</strong>, unul dintre cele mai frumoase edificii locale, construit inainte de invaziile mongole de la jumatatea secolului XIII. Turnul se inalta pe sapte niveluri, iar la parter este prevazut cu o trecere boltita. Turnul a servit drept depozit de cereale, foisor de foc, dar si muzeu. Din itinerariul vostru nu poate lipsi nici <strong>Piata Huet</strong>, asezata pe ruinele primei constructii fortificate a Sibiului. Aici exista deja in primele decenii ale secolului XV o capela, iar in vecinatatea acesteia se gasea <strong>Turnul preotilor</strong>. Odata ajunsi aici, trebuie sa vizitati <strong>Turnul Scarii</strong>, considerata cea mai veche constructie din Sibiu. A fost ridicat in secolul XIII, desi forma actuala dateaza de la jumatatea secolului XV. O atentie deosebita merita si <strong>cladirea Bisericii Evanghelice</strong>, veche de sase secole, despre care se spune ca este una dintre cele mai frumoase edificii de arhitectura gotica din Ardeal.</p>
<p style="text-align: justify;">O plimbare pe str. Cetatii iti creeaza impresia ca ai pasit intr-un decor de film, unde actiunea se petrece in timpurile evului mediu. Constructiile masive din piatra, fie ca vorbim de <strong>Turnul Archebuzierilor</strong>, vechi de la jumatatea secolului XIV, ori de cel al <strong>Olarilor</strong>, zidit in secolul XV, sau cel al <strong>Dulgherilor</strong>, tot ai sentimentul ca dupa zidurile groase se ascunde un mister, o legenda, o poveste ce asteapta sa fie descoperita. Interesanta este si constructia masiva ce poarta, sugestiv, numele de <strong>Turnul Gros</strong>. Aici s-au pus in scena primele reprezentatii teatrale din Sibiu, in anul 1778.</p>
<p style="text-align: justify;">Sibiul este o destinatie turistica unica si cand vine vorba de itinerarii religioase, daca ne gandim doar la cateva lacasuri de cult, unele cu o traditie ce se pierde in negura vremurilor. Un prim popas ar trebui sa faceti la <strong>Biserica Franciscana</strong>, construita in secolul XV. O atentie deosebita merita si &quot;<strong>Biserica dintre brazi</strong>&quot;, construita in anul 1788, considerata cel mai vechi lacas de cult romanesc din Sibiu, in timp ce <strong>Biserica Sf. Luca</strong> de pe str. Lunga, ridicata in anul 1791, este prima biserica de rit ortodox din oras.</p>
<p style="text-align: justify;">Dincolo de edificii spectaculoase, Sibiul se mandreste si cu cateva parcuri si gradini superbe, spatii ideale pentru petrecerea unei dupa amiezi in mijlocul naturii. &quot;<strong>Parcul sub arini</strong>&quot; este unul dintre locurile preferate ale localnicilor. A fost amenajat in urma cu un veac si jumatate si care s-a trasformat de-a lungul timpului intr-o veritabila gradina botanica unde traiesc aproape 70 de specii de plante distincte, dintre care unele exotice, altele autohtone. Daca dispuneti de suficient timp, nu ratati o plimbare pe <strong>aleile parcului ASTRA</strong>, iar daca sunteti in vacanta insotiti de cei mici, in mod sigura le veti face o mare bucurie daca va opriti si la <strong>Gradina zoologica</strong>, una dintre cele mai frumoase din tara, amenajata in Padurea Dumbrava, la 4 km de centrul Sibiului.</p>
<p style="text-align: justify;">Dincolo de obiective turistice, istorie si locuri ce merita toata atentia voastra, orasul dispune de o multitudine de posibilitati pentru petrecerea timpului liber dar si de o viata de noapte foarte activa. Fie ca alegeti plimbarile in natura sau terasele si restaurantele care mai de care mai cochete, la Sibiu nu va veti plictisi. Cele cateva zeci de cluburi cu muzica live, pentru toate gusturile, sunt amenjate in decoruri elegante care te imbie la distractie.</p>
]]></string>
    <string name="qr" translatable="false">QR</string>
    <string name="Info" translatable="false">Facultatea de Inginerie</string>
</resources>
